; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/ibxm/extr_ibxm.c_exp_2.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/ibxm/extr_ibxm.c_exp_2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FP_MASK = common dso_local global i32 0, align 4
@FP_SHIFT = common dso_local global i32 0, align 4
@exp2_table = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @exp_2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exp_2(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = load i32, i32* @FP_MASK, align 4
  %9 = and i32 %7, %8
  %10 = load i32, i32* @FP_SHIFT, align 4
  %11 = sub nsw i32 %10, 7
  %12 = ashr i32 %9, %11
  store i32 %12, i32* %6, align 4
  %13 = load i32*, i32** @exp2_table, align 8
  %14 = load i32, i32* %6, align 4
  %15 = sext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %3, align 4
  %18 = load i32*, i32** @exp2_table, align 8
  %19 = load i32, i32* %6, align 4
  %20 = add nsw i32 %19, 1
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = load i32, i32* %3, align 4
  %25 = sub nsw i32 %23, %24
  store i32 %25, i32* %4, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* %2, align 4
  %28 = load i32, i32* @FP_MASK, align 4
  %29 = ashr i32 %28, 7
  %30 = and i32 %27, %29
  %31 = mul nsw i32 %26, %30
  %32 = ashr i32 %31, 8
  %33 = load i32, i32* %3, align 4
  %34 = add nsw i32 %32, %33
  store i32 %34, i32* %5, align 4
  %35 = load i32, i32* %5, align 4
  %36 = load i32, i32* @FP_SHIFT, align 4
  %37 = shl i32 %35, %36
  %38 = load i32, i32* @FP_SHIFT, align 4
  %39 = load i32, i32* %2, align 4
  %40 = load i32, i32* @FP_SHIFT, align 4
  %41 = ashr i32 %39, %40
  %42 = sub nsw i32 %38, %41
  %43 = ashr i32 %37, %42
  ret i32 %43
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
